Fix OS command injection part4